# JRPC

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  cmake_install.cmake  compile_commands.json  docker-compose-minimal.yaml  docker-compose.yaml  info_during_coding  install  install.sh  patch.sh  start.sh
.github/: FUNDING.yml
etc/: build-Linux.yaml  standalone-config.yaml
etc/Mainnet/Docker/: docker-compose-Mainnet-analytics.yaml  docker-compose-Mainnet-babel-api.yaml  docker-compose-Mainnet-minimal.yaml  docker-compose-mainnet-analytics.yaml  docker-compose-mainnet-minimal.yaml  docker-compose.yaml
etc/Mainnet/IoTeX/: config-override.yaml  genesis-override.yaml
etc/Testnet/Docker/: docker-compose-Testnet-analytics.yaml  docker-compose-Testnet-babel-api.yaml  docker-compose-Testnet-minimal.yaml  docker-compose-testnet-analytics.yaml  docker-compose-testnet-minimal.yaml  docker-compose.yaml
etc/Testnet/IoTeX/: config-override.yaml  election-override.yaml  genesis-override.yaml
etc/Testnet/redis/: redis.conf
playground/: Makefile  cmake_install.cmake
playground/ExampleApps/: Makefile  cmake_install.cmake
src/: AboutWindow.cpp  Acknowledgments.cpp  CMakeLists.txt  ImGuiCodeBrowser.cpp  ImGuiManual.cpp  LibrariesCodeBrowser.cpp  Makefile  MenuTheme.h  WindowWithEditor.cpp  WindowWithEditor.h  cmake_install.cmake  imGuIZMO_testWindow.cpp  imGuIZMO_testWindow.h  jrpc_Style.cpp  jrpc_Style.h  populate_assets.sh  shell.emscripten.html  start.sh  stop.sh  wallet.cpp
src/assets/shaders/: qjVert.glsl
src/imgui_demowindow_only/: Makefile  cmake_install.cmake
src/imgui_utilities/: Makefile  cmake_install.cmake
src/make_example_apps/: Makefile  assets  cmake_install.cmake
src/source_parse/: GuiHeaderTree.h  Makefile  Sources.cpp  Sources.h  cmake_install.cmake
tools/: check_Mainnet_Height.sh  check_Testnet_Height.sh  emscripten_build.sh  getVersion  setenv.sh
